# rail_fence.rs

./: Cargo.toml
src/: cli.rs  encode.rs  main.rs
src/cipher/: encode.rs  mod.rs
