[package]
name = "rail_fence_cipher"
version = "0.1.0"
edition = "2021"
authors = ["Mateus Felipe G. <contact@mateusf.com>"]
description = "Encode a given string using \"Rail Fence\" cipher."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
